feat: add Time Capsule component with form handling and state management
- Implemented Time Capsule component for creating and managing time capsules.
- Added form validation and error handling for user input.
- Integrated local storage functionality for saving and loading time capsules.
- Created utility functions for date formatting and validation.
- Added global state management for time capsules and regrets using signals.
- Developed tests for storage functions to ensure data integrity.
- Defined core data types for the application including Time Capsule and RegretEntry.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.27.0"
+    "@preact/signals": "^2.2.1",
+    "date-fns": "^4.1.0",
+    "lucide-preact": "^0.540.0",
+    "preact": "^10.27.0",
+    "preact-router": "^4.1.2"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.2",
